<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <!--https://developer.android.com/reference/android/widget/RadioButton-->
    <RadioGroup
        android:id="@+id/dateFilterRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Today"
            android:padding="12dp"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioTomorrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tomorrow"
            android:padding="12dp"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioWithin7Days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Within 7 days"
            android:padding="12dp"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioWithin14Days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Within 14 Days"
            android:padding="12dp"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioThisMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="This Month"
            android:padding="12dp"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioAllDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="All Dates"
            android:padding="12dp"
            android:textSize="16sp"
            android:checked="true" />

    </RadioGroup>

</ScrollView>