<resources>
    <string name="app_name">ELotto</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="event_image_desc">Event preview image set by the event organizer.</string>
    <string name="date_icon_desc">A clock icon indicating this field is the event date and time.</string>
    <string name="location_icon_desc">A map pin Icon to indicate that this field is the location.</string>
    <string name="entrants_icon_desc">An icon of two people to indicate the amount of people entered in the event.</string>

    <string name="search_hint">Search events…</string>
    <string name="profile_button">Profile icon</string>
    <string name="filter_button">filter button</string>
    <string name="no_events">no events</string>
    <string name="no_events_available">no events available</string>
    <string name="home">Home</string>
    <string name="entries">Entries</string>
    <string name="calendar">Calendar</string>
    <string name="my_events">My Events</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone (optional)</string>
    <string name="name_hint">Name</string>
    <string name="create_event_button">Create</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_scan_qr">Scan QR Code</string>

    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="notification_preferences">Notification preferences</string>
    <string name="entries_title">Entries</string>

    <string name="event_poster">Event Poster</string>
    <string name="event_name">Event Name</string>
    <string name="event_name_input">Enter event name</string>
    <string name="event_description">Event Description</string>
    <string name="event_description_input">Enter event description</string>
    <string name="event_date_amp_time">Event Date &amp; Time</string>
    <string name="mm_dd_yy">MM/DD/YY</string>
    <string name="time">Time</string>
    <string name="registration_period">Registration Period</string>
    <string name="opens">Opens</string>
    <string name="maximum_entrants">Maximum Entrants</string>
    <string name="entrant_limit">Entrant Limit</string>
    <string name="wait_list_size_optional">Wait List Size (Optional)</string>
    <string name="leave_empty_for_unlimited">Leave empty for unlimited</string>
    <string name="require_entrants_to_share_their_location">Require entrants to share their location</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>


    <string name="back_button">Back</string>
    <string name="event_image">Event Image</string>
    <string name="date_icon">Date icon</string>
    <string name="time_icon">Time icon</string>
    <string name="location_icon">Location icon</string>
    <string name="entries_icon">Entries icon</string>


    <string name="registration_ends">Registration Ends</string>
    <string name="lottery_drawn">Lottery Drawn</string>
    <string name="about">About</string>
    <string name="enter_lottery">Enter Lottery</string>
    <string name="inboxTitle">Inbox</string>

    <!-- Accept/Decline Invitation Strings -->
    <string name="congratulations_selected">Congratulations, you\'ve been selected!</string>
    <string name="please_rsvp_message">Please RSVP within the time limit to confirm your attendance.</string>
    <string name="timer_icon">Timer</string>
    <string name="success_icon">Success</string>
    <string name="cant_attend">I Can\'t Attend</string>
    <string name="can_attend">I Can Attend</string>
    <string name="MyEventsEmptyString">No events to show, you can create your first event by pressing the plus button in the bottom left!</string>
    <string-array name="tag_options">
        <item>Music</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Art</item>
        <item>Food</item>
        <item>Business</item>
        <item>Health &amp; Wellness</item>
        <item>Networking</item>
    </string-array>
</resources>