<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_profile"
        android:title="Profile"
        android:icon="@drawable/ic_person_24"
        android:iconTint="@color/black" />

    <item
        android:id="@+id/action_inbox"
        android:title="Inbox"
        android:icon="@drawable/ic_email_24"
        android:iconTint="@color/black" />

    <item
        android:id="@+id/action_settings"
        android:title="Settings"
        android:icon="@drawable/ic_settings_24"
        android:iconTint="@color/black" />

    <item
        android:id="@+id/action_faq"
        android:title="FAQ"
        android:icon="@drawable/ic_help_24"
        android:iconTint="@color/black" />

    <item
        android:id="@+id/action_qr"
        android:title="Scan QR Code"
        android:icon="@drawable/ic_camera_24"
        android:iconTint="@color/black" />

</menu>
