...
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle_outline_background"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back_24"
        android:tint="@color/white"
...
