...
                android:text="My Profile"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="Edit"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:backgroundTint="@color/main_icon_blue"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
...
