...
                android:textSize="13sp"
                android:textColor="@color/form_icon"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchOrganizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/switch_thumb_tint"
            app:trackTint="@color/switch_track_tint" />
    </LinearLayout>

...
                android:textSize="13sp"
                android:textColor="@color/form_icon"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/switch_thumb_tint"
            app:trackTint="@color/switch_track_tint"  />
    </LinearLayout>

...
