package com.hotdog.elotto.ui;

import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import com.hotdog.elotto.MainActivity;
import com.hotdog.elotto.R;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;

@RunWith(AndroidJUnit4.class)
public class ProfileBackButtonTest {
    @Rule
    public ActivityScenarioRule<MainActivity> rule = new ActivityScenarioRule<>(MainActivity.class);

    @Test
    public void backButtonNavigatesToHome() {
        onView(withId(R.id.profileButton)).perform(click());
        onView(withText("Profile")).perform(click());
        onView(withId(R.id.btn_back)).perform(click());
        onView(withId(R.id.eventsRecyclerView)).check(matches(isDisplayed()));
    }
}
